components/manifests/overlays/mpp-preprod/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
  labels:
    app: backend-api
spec:
  host: backend-route-ambient-code--runtime-int.apps.int.spoke.preprod.us-east-1.aws.paas.redhat.com
  to:
    kind: Service
    name: backend-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
