components/manifests/overlays/mpp-preprod/public-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: public-api-route
  labels:
    app: public-api
spec:
  host: public-api-route-ambient-code--runtime-int.apps.int.spoke.preprod.us-east-1.aws.paas.redhat.com
  to:
    kind: Service
    name: public-api-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
