components/manifests/overlays/mpp-preprod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  labels:
    app: frontend
spec:
  host: ambient-code.apps.int.spoke.preprod.us-east-1.aws.paas.redhat.com
  to:
    kind: Service
    name: frontend-service
    weight: 100
  port:
    targetPort: dashboard-ui
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
